# proj-repro

./: .gitmodules  BUILD.bazel  README.md  WORKSPACE  main.go  proj.cc
c-deps/: BUILD.bazel
c-deps/proj2/: BUILD.bazel  proj2.c
pkgb/: BUILD.bazel  a.go
proj/: BUILD.bazel  proj.cc  proj.go  proj.h
repro/: BUILD.bazel  a.go  a2_test.go  a_test.go
