load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# Lets you run `bazel run //:gazelle` to generate BUILD files. Will need to be
# re-run if any of the directives below are changed.

# gazelle:prefix github.com/cockroachdb/cockroach
# gazelle:build_file_name BUILD.bazel
# gazelle:proto disable_global
# gazelle:resolve go github.com/grpc-ecosystem/grpc-gateway/internal //vendor/github.com/grpc-ecosystem/grpc-gateway/internal

gazelle(
    name = "gazelle",
    prefix = "github.com/cockroachdb/cockroach",
)

go_library(
    name = "cockroach_lib",
    srcs = [
        "main.go",
        "proj.cc",
        "proj.h",
    ],
    cdeps = ["//c-deps:proj"],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-lrt -lm -lpthread",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-lrt -lm -lpthread",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-lshlwapi -lrpcrt4",
        ],
        "//conditions:default": [],
    }),
    cxxopts = ["-std=c++14"],
    importpath = "github.com/cockroachdb/cockroach",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cockroach",
    embed = [":cockroach_lib"],
    visibility = ["//visibility:public"],
)
