load("@bazel_gazelle//:def.bzl", "gazelle")

# Lets you run `bazel run //:gazelle` to generate BUILD files. Will need to be
# re-run if any of the directives below are changed.

# gazelle:prefix github.com/cockroachdb/proj-repro
# gazelle:build_file_name BUILD.bazel
# gazelle:proto disable_global

gazelle(
    name = "gazelle",
    prefix = "github.com/cockroachdb/cockroach",
)
