load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "proj",
    srcs = [
        "proj.cc",
        "proj.go",
        "proj.h",
    ],
    cdeps = ["//c-deps/proj2:proj2"],
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:android": [
            "-lrt -lm -lpthread",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "-lrt -lm -lpthread",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "-lshlwapi -lrpcrt4",
        ],
        "//conditions:default": [],
    }),
    cxxopts = ["-std=c++14"],
    importpath = "github.com/cockroachdb/proj-repro/proj",
    visibility = ["//visibility:public"],
)
