load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repro",
    srcs = ["a.go"],
    importpath = "github.com/cockroachdb/proj-repro/repro",
    visibility = ["//visibility:public"],
)

go_test(
    name = "repro_test",
    srcs = [
        "a2_test.go",
        "a_test.go",
    ],
    embed = [":repro"],
    deps = ["//pkgb"],
)
